kubernetes/applications/dashboard-api/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: dashboard-api
  namespace: applications

  labels:
    app.kubernetes.io/name: dashboard-api
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: order-fulfillment-platform

spec:
  type: ClusterIP

  selector:
    app: dashboard-api

  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
