kubernetes/applications/dashboard-api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: dashboard-api
  namespace: applications

spec:
  podSelector:
    matchLabels:
      app: dashboard-api

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8086

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data
      ports:
        - protocol: TCP
          port: 5432

    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
